--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <div class="caja-izquierda">
             <p style="font-size: 40px;" style="font-family: sans-serif;">Making earth cooler for people, nature, climate</p>
             <p style="font-family: sans-serif;">Protecting the planet and its natural resources for the future, by reducing pollution, promoting sustainability, and conserving energy and resources.</p>
+        <div>
+            
+        </div>
         </div>
         <div class="caja-derecha" style="background-color: #ffcc00;">
         </div>
