--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
             <p style="font-size: 40px;" style="font-family: sans-serif;">Making earth cooler for people, nature, climate</p>
             <p style="font-family: sans-serif;">Protecting the planet and its natural resources for the future, by reducing pollution, promoting sustainability, and conserving energy and resources.</p>
         </div>
-        <div class="caja-derecha" style="background-color: #ffcc00;">
+        <div class="caja-derecha">
+            <div class="slider">
+                <div class="list">
+                    <div class="item">
+                        <img src="img1.jpg" alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
