--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <div class="contenedor">
@@ -16,9 +16,36 @@
             <div class="slider">
                 <div class="list">
                     <div class="item">
-                        <img src="img1.jpg" alt="">
+                        <img src="img/img1.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="img/img2.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="img/img3.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="img/img4.jpg" alt="">
+                    </div>
+                    <div class="item">
+                        <img src="img/img5.jpg" alt="">
                     </div>
                 </div>
+
+                <!-- Button prev and next -->
+                <div class="buttons">
+                    <button id="prev"><</button>
+                    <button id="next">></button>
+                </div>
+
+                <!-- Dots (if 5 items => dot) -->
+                <ul class="dots">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
         </div>
     </div>
