Terminando temporalmente el html y css

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <!-- Dots (if 5 items => dot) -->
                 <ul class="dots">
-                    <li></li>
+                    <li class="active"></li>
                     <li></li>
                     <li></li>
                     <li></li>
