--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             <p style="font-size: 40px;" style="font-family: sans-serif;">Making earth cooler for people, nature, climate</p>
             <p style="font-family: sans-serif;">Protecting the planet and its natural resources for the future, by reducing pollution, promoting sustainability, and conserving energy and resources.</p>
         <div>
-            
+            <a href="https://www.facebook.com/"><img class="logos" src="img/facebook.webp" alt=""></a>
+            <a href="https://www.instagram.com/"><img class="logos" src="img/instagram.png" alt=""></a>
+            <a href="https://twitter.com/"><img class="logos" src="img/twitter.png" alt=""></a>
+            <a href="https://www.youtube.com/"><img class="logos" src="img/youtube.png" alt=""></a>
         </div>
         </div>
         <div class="caja-derecha" style="background-color: #ffcc00;">
