Reorganizando Directorios y Haciendo Responsive a la web

--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/indexSandoval.css">
+    <link rel="stylesheet" href="css/indexJeanpier.css">
 </head>
 <body>
     <div class="contenedor">
         <div class="caja-izquierda">
-            <p style="font-size: 40px;" style="font-family: sans-serif;">Making earth cooler for people, nature, climate</p>
-            <p style="font-family: sans-serif;">Protecting the planet and its natural resources for the future, by reducing pollution, promoting sustainability, and conserving energy and resources.</p>
-        <div>
+            <p style="font-size:70px;"><b>Making earth cooler for people, nature, climate</b></p>
+            <p style="color:rgb(198, 204, 203)" style="font-size:20px;">Protecting the planet and its natural resources for the future, by reducing pollution, promoting sustainability, and conserving energy and resources.</p>
+            <br>
+            <hr>
+            <br>
+            <p style="font-size:30px;" style="color:rgb(198, 204, 203)">Parthers and Backers:</p>
+            <br>
             <a href="https://www.facebook.com/"><img class="logos" src="img/facebook.webp" alt=""></a>
             <a href="https://www.instagram.com/"><img class="logos" src="img/instagram.png" alt=""></a>
             <a href="https://twitter.com/"><img class="logos" src="img/twitter.png" alt=""></a>
             <a href="https://www.youtube.com/"><img class="logos" src="img/youtube.png" alt=""></a>
-        </div>
         </div>
         <div class="caja-derecha">
             <div class="slider">
