--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     <div class="contenedor">
         <div class="caja-izquierda">
             <p style="font-size:70px;"><b>Making earth cooler for people, nature, climate</b></p>
-            <p style="color:rgb(198, 204, 203)" style="font-size:20px;">Protecting the planet and its natural resources for the future, by reducing pollution, promoting sustainability, and conserving energy and resources.</p>
+            <p style="color:rgb(198, 204, 203); font-size:30px;">Protecting the planet and its natural resources for the future, by reducing pollution, promoting sustainability, and conserving energy and resources.</p>
+            <div class="botones">
+                <a class="boton-01" href="https://github.com/JeanpierRR/practica001" target="_blank">Leer más</a>
+                <a class="boton-02" href="https://github.com/JeanpierRR/practica001" target="_blank">Leer más</a>
+            </div>
             <br>
             <hr>
             <br>
-            <p style="font-size:30px;" style="color:rgb(198, 204, 203)">Parthers and Backers:</p>
+            <p  style="color: rgba(171, 171, 171, 0.888); font-size: 15px;">Parthers and Backers:</p>
             <br>
             <a href="https://www.facebook.com/"><img class="logos" src="img/facebook.webp" alt=""></a>
             <a href="https://www.instagram.com/"><img class="logos" src="img/instagram.png" alt=""></a>
